--- a/templates/default/ntp.conf.erb
+++ b/templates/default/ntp.conf.erb
@@ -13,10 +13,12 @@
 <% end -%>
 driftfile <%= node['ntp']['driftfile'] %>
 
+<% if node['ntp']['statistics'] -%>
 statistics loopstats peerstats clockstats
 filegen loopstats file loopstats type day enable
 filegen peerstats file peerstats type day enable
 filegen clockstats file clockstats type day enable
+<% end -%>
 
 <%# If the listen attribute is set on the node, then apply it %>
 <% unless node['ntp']['listen'].nil? -%>
